--- a/less/creative.less
+++ b/less/creative.less
@@ -360,7 +360,7 @@ body {
 	    border: none;
 	    min-height: 100%;
 	    padding: 100px 0;
-	    text-align: center;
+	    // text-align: center;
 		h2 {
 	    	margin-bottom: 15px;
 	    	font-size: 3em;
